<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id = "@+id/select_settings"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/colorWhite"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding = "10dp"
        android:orientation="vertical">
        <TextView
            android:id = "@+id/settingsName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text = "@string/VocabularyCardCountPerDay"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/colorWhiteTranslate"
            android:gravity="center"/>
        <EditText
            android:id="@+id/editText"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text = "40"
            android:textSize="50sp" />
        <TextView
            android:id = "@+id/newWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhiteSynonym"
            android:text = "новых слов в день"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="0dp">
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorWhiteExample"
                android:text="вы выучите 140 слов за неделю, 100 за месяц, 500 за год"
                android:textAlignment="center"
                android:textSize="20dp"/>
                <ImageView
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/divider" />
                <TextView
                    android:id="@+id/warning"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/paceReallyHigh"
                    android:textColor="@color/colorOrange"
                    android:textAlignment="center"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:padding="20dp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/buttonAccept"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:padding="20dp"
                    android:text="@string/accept"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
            <TextView
                android:id = "@+id/spacer"
                android:layout_height="30dp"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>