<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:padding = "16dp"
    android:id = "@+id/day_plan_fragment"
    android:layout_marginTop="20dp"
    android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id = "@+id/cardView"
            android:layout_weight="8"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="3dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/colorWhite">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent">
                <TextView
                    android:id = "@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity = "center"
                    android:gravity = "center"
                    android:textSize = "25sp"
                    android:text = "@string/add_new_card"/>

                    <LinearLayout
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_horizontal"
                        android:gravity = "center"
                        android:layout_width="match_parent">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:padding = "10dp"
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity = "center"
                            android:layout_gravity = "center">
                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:padding="20dp"
                        android:text="@string/cancel"
                        android:visibility="visible"
                        android:textColor="@color/colorAccent" />

                    <Button
                        android:id="@+id/buttonAccept"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:padding="20dp"
                        android:text="@string/accept"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>