<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf8f6"
    android:padding = "16dp"
    android:layout_gravity="center"
    tools:context="activities.testTranslate">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="3dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorWhite">


        <ScrollView
            android:id = "@+id/testScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="14">
            <TextView
                android:id="@+id/part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWhiteTranslate"
                android:gravity="center"
                android:text = "@string/write_the_sentence"
                android:textColor="@color/colorWhite"
                android:textSize="23sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="example example example example"
                android:textColor="@color/colorWhiteTranslate"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <EditText
                android:id="@+id/editText"
                android:inputType="textNoSuggestions|textCapSentences|textImeMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@null"
                android:textAlignment="center"
                android:gravity="center"
                android:scrollHorizontally="false"
                android:hint="запиши предложение"
                android:outlineAmbientShadowColor="@color/colorBlack"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/skip"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                android:text="@string/skip" />
            <Button
                android:id="@+id/check"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                android:text="@string/check" />
            </LinearLayout>

        </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


</LinearLayout>