<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf8f6"
    android:padding = "16dp"
    tools:context=".activities.testTranslate">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="3dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity = "center"
        app:cardBackgroundColor="@color/colorWhite">


        <ScrollView
            android:id = "@+id/testScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorWhiteTranslate"
                android:text="@string/write_the_word"
                android:textColor="@color/colorWhite"
                android:textSize="23sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity = "center"
                android:weightSum="3"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/soundButton"
                    android:layout_width="0dp"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/playsoundtest" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <TextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="center"
                android:textSize="30sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id = "@+id/letterBlocks"
                android:layout_height="wrap_content"
                android:gravity = "center"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                >
            </androidx.recyclerview.widget.RecyclerView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/skip"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:stateListAnimator="@null"
                    android:text="@string/skip" />
                <Button
                    android:id="@+id/check"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:stateListAnimator="@null"
                    android:text="@string/check" />
            </LinearLayout>

        </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>


</LinearLayout>